--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -13,4 +13,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           # add PDFs
-          export: [html, pdf]
+          export: html, pdf
